--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
 
+  <!-- Dekstop header -->
   <div class="col-md-2 position-fixed h-100vh d-none d-md-block bg-black z-index-max">
     <div class="left-sidebar h-100vh">
       <nav>
@@ -50,7 +51,6 @@
         <a href="https://www.instagram.com/liwei.y_/">
           <i class="m-4 fab fa-instagram nav-logo"></i>
         </a>
-        <!-- TODO: add resume -->
         <a href="resources\cv.pdf" target="_blank" type='application/pdf'>
           <i class="m-4 fas fa-file-alt nav-logo"></i>
         </a>
@@ -80,7 +80,7 @@
         <div class="w-100 text-center py-4">
           <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Li-Wei</h1>
         </div>
-        <h4 class="text-center mx-4 font-inconsalita">Student in Computer Science</h4>
+        <h4 class="intro-occupation text-center mx-4 font-inconsalita">Student in Computer Science</h4>
       </div>
     </div>
   </div>
@@ -88,7 +88,6 @@
   <div class="container">
     <div class="main row">
       <div class="col-md-2 col-sm-0">
-        <!-- placeholder -->
       </div>
       <div class="col-md-10 col-sm-12 px-0">
         <div class="my-4" id="about-me">
@@ -348,8 +347,3 @@
 </body>
 
 </html>
-
-<!-- 
-  if mobile, hide this
-  d-none d-md-block
- -->
