--- a/guitartabs/songs/EricClapton-WonderfulTonight.html
+++ b/guitartabs/songs/EricClapton-WonderfulTonight.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Eric Clapton - Wonderful Tonight</title>
 
-  <link rel="stylesheet" href="C:\Users\liwei\source\repos\LiWeiYeh.github.io\main.css">
+  <link rel="stylesheet" href="LiWeiYeh.github.io\main.css">
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"> -->
