--- a/guitartabs/songs/AlanWalker-Faded.html
+++ b/guitartabs/songs/AlanWalker-Faded.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Alan Walker - Faded</title>
 
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/main.css">
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"> -->
@@ -22,7 +22,7 @@
     <nav>
       <ul class="text-center">
         <li>
-          <a href="file:///C:/Users/liwei/source/repos/LiWeiYeh.github.io/guitartabs/guitartabs.html" class="text-center">
+          <a href="/guitartabs/guitartabs.html" class="text-center">
             <h3>Guitar Songs list</h3>
           </a>
         </li>
