--- a/guitartabs/guitartabs.html
+++ b/guitartabs/guitartabs.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Li-Wei Yeh</title>
 
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="../main.css">
 
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"> -->
@@ -22,7 +22,7 @@
     <nav>
       <ul class="text-center">
         <li>
-          <a href="/guitartabs/guitartabs.html" class="text-center">
+          <a href="./guitartabs.html" class="text-center">
             <h3>Guitar Songs list</h3>
           </a>
         </li>
@@ -31,7 +31,7 @@
   </div>
 
 
-  <div class="songs-list">
+  <div class="songs-list mt-4">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
