--- a/guitartabs/songs/EricClapton-WonderfulTonight.html
+++ b/guitartabs/songs/EricClapton-WonderfulTonight.html
@@ -7,8 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Eric Clapton - Wonderful Tonight</title>
 
-  <link rel="stylesheet" href="/main.css">
-
+  <link rel="stylesheet" href="./../../main.css">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
@@ -22,7 +21,7 @@
     <nav>
       <ul class="text-center">
         <li>
-          <a href="/guitartabs/guitartabs.html" class="text-center">
+          <a href="../guitartabs.html" class="text-center">
             <h3>Guitar Songs list</h3>
           </a>
         </li>
@@ -31,7 +30,7 @@
   </div>
 
 
-  <div class="tabs">
+  <div class="tabs mt-4">
     <h4 class="text-center">Eric Clapton - Wonderful Tonight (Fingerstyle)</h4>
 
     <div>
