added brockhampton face

--- a/guitartabs/guitartabs.html
+++ b/guitartabs/guitartabs.html
@@ -42,6 +42,10 @@
           <a class="pl-3" href="songs/AnoHana-SecretBase.pdf">
             AnoHana - SecretBase (fingerstyle)
           </a>
+          <li>B</li>
+          <a class="pl-3" href="songs/Brockhampton-Face.html">
+            Brockhampton - Face 
+          </a>
           <li>E</li>
           <a class="pl-3" href="songs/EricClapton-WonderfulTonight.html">
             Eric Clapton - Wonderful Tonight (fingerstyle)
@@ -53,10 +57,7 @@
           <a class="pl-3" href="songs/Tong Hua (Fairytale) - Guang Liang.pdf" target="_blank" type='application/pdf'>
             Guang Liang - Tong Hua (fingerstyle, pdf)
           </a>
-        </div>
-
-        <div class="col-lg-3">
-          <li>G</li>
+          <li>J</li>
           <a class="pl-3" href="songs/JasonSong.html" target="_blank" type='application/pdf'>
             Jason Song
           </a>
