updated index file, updated cv

--- a/index.html
+++ b/index.html
@@ -110,24 +110,29 @@
               <div class="about-me-profile col-lg-5 offset-lg-1 col-sm-12 mb-5">
                 <h4 class="text-center">Profile</h4>
                 <div class="container">
+
                   <div class="row">
+
                     <div class="col-lg-4 col-5 border-right text-right">
                       <p><b>Full name</b></p>
                     </div>
                     <div class="col-lg-8 col-7">
                       <p>Li-Wei Yeh</p>
                     </div>
+
                     <div class="col-lg-4 col-5 border-right text-right">
                       <p><b>Age</b></p>
                     </div>
                     <div class="col-lg-8 col-7 text-darkgrey">
-                      <p>19</p>
+                      <p>20</p>
                     </div>
+
                     <div class="col-lg-4 col-5 border-right text-right">
                       <p><b>Certificates</b></p>
                     </div>
                     <div class="col-lg-8 col-7">
                       <p>Propaedeutics in Computer Science</p>
+                      <p>CCNA Routing and Switching, Introduction to Networks</p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
@@ -162,39 +167,37 @@
                     <p>Angular</p>
                   </div>
                   <div class="d-inline-block px-2">
-                    <a href="https://git-scm.com/">
-                      <i class="devicon-git-plain"></i>
-                    </a>
-                    <p>Git</p>
-                  </div>
-                  <div class="d-inline-block px-2">
                     <a href="https://docs.microsoft.com/en-us/dotnet/csharp/">
                       <i class="devicon-csharp-plain"></i>
                     </a>
                     <p>C#</p>
                   </div>
                   <div class="d-inline-block px-2">
-                    <a href="https://sass-lang.com/">
-                      <i class="devicon-sass-original"></i>
+                    <a href="https://www.python.org/">
+                      <i class="devicon-python-plain"></i>
                     </a>
-                    <p>Sass</p>
+                    <p>Python</p>
+                  </div>
+                  <div class="d-inline-block px-2">
+                    <p>F#</p>
+                  </div>
+                </div>
+
+                <h5 class="text-center">
+                  Little Experience
+                </h5>
+                <div class="about-me-skills-logos text-center">
+                  <div class="d-inline-block px-2">
+                    <a href="https://git-scm.com/">
+                      <i class="devicon-git-plain"></i>
+                    </a>
+                    <p>Git</p>
                   </div>
                   <div class="d-inline-block px-2">
                     <a href="https://getbootstrap.com/">
                       <i class="devicon-bootstrap-plain"></i>
                     </a>
                     <p>Bootstrap</p>
-                  </div>
-                </div>
-                <h5 class="text-center">
-                  Little Experience
-                </h5>
-                <div class="about-me-skills-logos text-center">
-                  <div class="d-inline-block px-2">
-                    <a href="https://www.python.org/">
-                      <i class="devicon-python-plain"></i>
-                    </a>
-                    <p>Python</p>
                   </div>
                   <div class="d-inline-block px-2">
                     <a href="https://www.javascript.com/">
@@ -203,12 +206,19 @@
                     <p>JavaScript</p>
                   </div>
                   <div class="d-inline-block px-2">
+                    <a href="https://sass-lang.com/">
+                      <i class="devicon-sass-original"></i>
+                    </a>
+                    <p>Sass</p>
+                  </div>
+                  <div class="d-inline-block px-2">
                     <a href="https://dotnet.microsoft.com/">
                       <i class="devicon-dot-net-plain"></i>
                     </a>
                     <p>.NET</p>
                   </div>
                 </div>
+
               </div>
             </div>
           </div>
@@ -218,6 +228,7 @@
             <div class="my-4" id="projects">
               <h3 class="my-4">Projects</h3>
               <div class="container">
+
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
@@ -242,6 +253,32 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
+                      <h4 class="big-ass-word">Face Recognition with OpenCV</h4>
+                      <h5>2019</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>AI Project</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Made with Python, OpenCV
+                        </li>
+                        <li>
+                          Software will recognize your face, using your camera
+                        </li>
+                        <li>
+                          Github link <a href="https://github.com/LiWeiYeh/Face-Recognition-OpenCV">here</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -251,7 +288,7 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
-                      <h4>Software Engineer Intern</h4>
+                      <h4>Software Engineering Intern</h4>
                       <h5>Sept 2018 - Jan 2019</h5>
                     </div>
                   </div>
@@ -275,6 +312,7 @@
             <div class="my-4" id="education">
               <h3 class="my-4">Education</h3>
               <div class="container">
+
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
@@ -293,6 +331,26 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
+                      <h4>Fall Exchange Program</h4>
+                      <h5>Sept 2019 - Present</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>National Taipei University of Technology</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Calculus, Discrete Math, Intro to Data Science, Intro to Telecommunication Engineering
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
 
