--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                       <p>Exercising</p>
                       <p>Music</p>
                       <p>Piano</p>
+                      <p>Guitar</p>
                     </div>
                   </div>
                 </div>
@@ -344,7 +345,10 @@
                       <h4>National Taipei University of Technology</h4>
                       <ul class="pl-3">
                         <li>
-                          Calculus, Discrete Math, Intro to Data Science, Intro to Telecommunication Engineering
+                          Calculus, Discrete Math, Intro to Data Science
+                        </li>
+                        <li>
+                          Volunteering Club, Guitar Club, Piano Club, Ukelele Club
                         </li>
                       </ul>
                     </div>
