updated education, changed music tabs

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   <div class="col-6 border-right">
                     <div class="text-right">
                       <h4>Fall Exchange Program</h4>
-                      <h5>Sept 2019 - Present</h5>
+                      <h5>Sept 2019 - January 2020</h5>
                     </div>
                   </div>
                   <div class="col-6 border-left">
