--- a/guitartabs/guitartabs.html
+++ b/guitartabs/guitartabs.html
@@ -70,6 +70,11 @@
                 Eden - Rock and Roll
               </a>
             </li>
+            <li>
+              <a class="pl-3" href="songs/EyeWater.pdf">
+                Eye Water 
+              </a>
+            </li>
           </ul>
         </div>
 
