--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   </div>
                   <div class="col-6 border-left">
                     <div>
-                      <h4>Methylium</h4>
+                      <h4>Methylium B.V.</h4>
                       <ul class="pl-3">
                         <li>
                           Helped creating an Angular website for visualizing data
