--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       <p><b>Age</b></p>
                     </div>
                     <div class="col-lg-8 col-7 text-darkgrey">
-                      <p>20</p>
+                      <p>21</p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
@@ -253,29 +253,51 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-6 border-right">
-                    <div class="text-right">
-                      <h4 class="big-ass-word">Face Recognition with OpenCV</h4>
-                      <h5>2019</h5>
+                    <div class="col-6 border-right">
+                      <div class="text-right">
+                        <h4 class="big-ass-word">Super Resolution</h4>
+                        <h5>2021</h5>
+                      </div>
+                    </div>
+                    <div class="col-6 border-left">
+                      <div>
+                        <h4>AI Project</h4>
+                        <ul class="pl-3">
+                          <li>
+                            Made with Python, Tensorflow
+                          </li>
+                          <li>
+                            Created a neural network to upscale image resolution. Input a low resolution image to get a higher resolution image.
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-6 border-left">
-                    <div>
-                      <h4>AI Project</h4>
-                      <ul class="pl-3">
-                        <li>
-                          Made with Python, OpenCV
-                        </li>
-                        <li>
-                          Software will recognize your face, using your camera
-                        </li>
-                        <li>
-                          Github link <a href="https://github.com/LiWeiYeh/Face-Recognition-OpenCV">here</a>
-                        </li>
-                      </ul>
+
+                  <div class="row">
+                      <div class="col-6 border-right">
+                        <div class="text-right">
+                          <h4 class="big-ass-word">Face Recognition with OpenCV</h4>
+                          <h5>2019</h5>
+                        </div>
+                      </div>
+                      <div class="col-6 border-left">
+                        <div>
+                          <h4>AI Project</h4>
+                          <ul class="pl-3">
+                            <li>
+                              Made with Python, OpenCV
+                            </li>
+                            <li>
+                              Software will recognize your face, using your camera
+                            </li>
+                            <li>
+                              Github link <a href="https://github.com/LiWeiYeh/Face-Recognition-OpenCV">here</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                </div>
 
               </div>
             </div>
@@ -283,27 +305,50 @@
             <div class="my-4" id="work-experience">
               <h3 class="my-4">Work Experience</h3>
               <div class="container">
+
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
-                      <h4>Software Engineering Intern</h4>
-                      <h5>Sept 2018 - Jan 2019</h5>
+                      <h4>Software Engineer Intern</h4>
+                      <h5>Sept 2020 - Jan 2021</h5>
                     </div>
                   </div>
                   <div class="col-6 border-left">
                     <div>
-                      <h4>Methylium B.V.</h4>
+                      <h4>ilionx</h4>
                       <ul class="pl-3">
                         <li>
-                          Helped creating an Angular website for visualizing data
+                          Created a recommender system in the form of an API.
                         </li>
                         <li>
-                          Technologies used: Angular (TypeScript), Plotly.js
+                          Technologies used: .NET (C#)
                         </li>
                       </ul>
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-6 border-right">
+                      <div class="text-right">
+                        <h4>Software Engineer Intern</h4>
+                        <h5>Sept 2018 - Jan 2019</h5>
+                      </div>
+                    </div>
+                    <div class="col-6 border-left">
+                      <div>
+                        <h4>Methylium B.V.</h4>
+                        <ul class="pl-3">
+                          <li>
+                            Helped creating an Angular website for visualizing data
+                          </li>
+                          <li>
+                            Technologies used: Angular (TypeScript), Plotly.js
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
               </div>
             </div>
 
@@ -345,7 +390,7 @@
                           Calculus, Discrete Math, Intro to Data Science
                         </li>
                         <li>
-                          Volunteering Club, Guitar Club, Piano Club, Ukelele Club
+                          Guitar Club, Piano Club, Ukelele Club
                         </li>
                       </ul>
                     </div>
