--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Raleway:400,700" rel="stylesheet">
@@ -35,10 +36,10 @@
             <a href="#about-me" class="nav-link text-center">About Me</a>
           </li>
           <li class="nav-item">
-            <a href="#projects" class="nav-link text-center">Projects</a>
+            <a href="#work-experience" class="nav-link text-center">Experience</a>
           </li>
           <li class="nav-item">
-            <a href="#work-experience" class="nav-link text-center">Experience</a>
+            <a href="#projects" class="nav-link text-center">Projects</a>
           </li>
           <li class="nav-item">
             <a href="#education" class="nav-link text-center">Education</a>
@@ -52,7 +53,7 @@
         <a href="https://www.linkedin.com/in/li-wei-yeh/">
           <i class="m-4 fab fa-linkedin-in nav-logo"></i>
         </a>
-        <a href="resources\cv.pdf" target="_blank" type='application/pdf'>
+        <a href="resources\cv\LIWEI_YEH_CV.pdf" target="_blank" type='application/pdf'>
           <i class="m-4 fas fa-file-alt nav-logo"></i>
         </a>
       </div>
@@ -66,7 +67,7 @@
         <div class="col-lg-2"></div>
         <div class="intro-text col-lg-10 h-100">
           <div class="w-100 text-center">
-            <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Li-Wei</h1>
+            <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Levi</h1>
           </div>
           <h4 class="text-center font-inconsalita">Student in Computer Science</h4>
         </div>
@@ -97,7 +98,7 @@
             <div class="about-me-intro text-center mb-5">
               <div class="d-inline-block w-75">
                 <p>
-                  Hi! I'm Li-Wei, currently a BSc computer science student. Thanks for checking my website!
+                  Hi! I'm Levi, currently a pre-master computer science student. Thanks for checking my website!
                 </p>
               </div>
             </div>
@@ -114,21 +115,21 @@
                       <p><b>Full name</b></p>
                     </div>
                     <div class="col-lg-8 col-7">
-                      <p>Li-Wei Yeh</p>
+                      <p>Li-Wei Yeh, but some call me Levi</p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
                       <p><b>Age</b></p>
                     </div>
                     <div class="col-lg-8 col-7 text-darkgrey">
-                      <p>21</p>
+                      <p>22</p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
                       <p><b>Certificates</b></p>
                     </div>
                     <div class="col-lg-8 col-7">
-                      <p>Propaedeutics in Computer Science</p>
+                      <p>BSc in Computer Science</p>
                       <p>CCNA Routing and Switching, Introduction to Networks</p>
                     </div>
 
@@ -171,13 +172,22 @@
                     <p>C#</p>
                   </div>
                   <div class="d-inline-block px-2">
+                    <a href="https://dotnet.microsoft.com/">
+                      <i class="devicon-dotnetcore-plain"></i>
+                    </a>
+                    <p>.NET</p>
+                  </div>
+                  <div class="d-inline-block px-2">
                     <a href="https://www.python.org/">
                       <i class="devicon-python-plain"></i>
                     </a>
                     <p>Python</p>
                   </div>
                   <div class="d-inline-block px-2">
-                    <p>F#</p>
+                    <a href="https://git-scm.com/">
+                      <i class="devicon-git-plain"></i>
+                    </a>
+                    <p>Git</p>
                   </div>
                 </div>
 
@@ -186,34 +196,22 @@
                 </h5>
                 <div class="about-me-skills-logos text-center">
                   <div class="d-inline-block px-2">
-                    <a href="https://git-scm.com/">
-                      <i class="devicon-git-plain"></i>
-                    </a>
-                    <p>Git</p>
-                  </div>
-                  <div class="d-inline-block px-2">
                     <a href="https://getbootstrap.com/">
                       <i class="devicon-bootstrap-plain"></i>
                     </a>
                     <p>Bootstrap</p>
                   </div>
                   <div class="d-inline-block px-2">
-                    <a href="https://www.javascript.com/">
-                      <i class="devicon-javascript-plain"></i>
+                    <a href="https://www.haskell.org/">
+                      <i class="devicon-haskell-plain"></i>
                     </a>
-                    <p>JavaScript</p>
+                    <p>Haskell</p>
                   </div>
                   <div class="d-inline-block px-2">
                     <a href="https://sass-lang.com/">
                       <i class="devicon-sass-original"></i>
                     </a>
                     <p>Sass</p>
-                  </div>
-                  <div class="d-inline-block px-2">
-                    <a href="https://dotnet.microsoft.com/">
-                      <i class="devicon-dot-net-plain"></i>
-                    </a>
-                    <p>.NET</p>
                   </div>
                 </div>
 
@@ -223,6 +221,81 @@
 
           <div id="resume">
 
+            <div class="my-4" id="work-experience">
+              <h3 class="my-4">Work Experience</h3>
+              <div class="container">
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
+                      <h4>Part-Time Developer</h4>
+                      <h5>July 2021 - Present</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>Methylium B.V.</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Responsible for both front-end and back-end work
+                        </li>
+                        <li>
+                          Addressed bugs and possible improvements in existing applications using Kanban boards to prioritize requirements.
+                        </li>
+                        <li>
+                          Part of the scrum team, having regular daily standups and sprint reviews
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
+                      <h4>Software Engineer Intern</h4>
+                      <h5>Sept 2020 - Jan 2021</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>ilionx</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Created a recommender system in the form of an API
+                        </li>
+                        <li>
+                          Used Kanban to prioritize requirements and communicate progress
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6 border-right">
+                      <div class="text-right">
+                        <h4>Software Engineer Intern</h4>
+                        <h5>Sept 2018 - Jan 2019</h5>
+                      </div>
+                    </div>
+                    <div class="col-6 border-left">
+                      <div>
+                        <h4>Methylium B.V.</h4>
+                        <ul class="pl-3">
+                          <li>
+                            Visualizing data in front-end development
+                          </li>
+                          <li>
+                            Part of the scrum team
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
             <div class="my-4" id="projects">
               <h3 class="my-4">Projects</h3>
               <div class="container">
@@ -230,7 +303,11 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
-                      <h4 class="big-ass-word">https://liweiyeh.github.io/</h4>
+                      <h4 class="big-ass-word">
+                        <a href="https://github.com/LiWeiYeh/LiWeiYeh.github.io">
+                          https://liweiyeh.github.io/
+                        </a>
+                      </h4>
                       <h5>Jan 2019 - Present</h5>
                     </div>
                   </div>
@@ -302,56 +379,6 @@
               </div>
             </div>
 
-            <div class="my-4" id="work-experience">
-              <h3 class="my-4">Work Experience</h3>
-              <div class="container">
-
-                <div class="row">
-                  <div class="col-6 border-right">
-                    <div class="text-right">
-                      <h4>Software Engineer Intern</h4>
-                      <h5>Sept 2020 - Jan 2021</h5>
-                    </div>
-                  </div>
-                  <div class="col-6 border-left">
-                    <div>
-                      <h4>ilionx</h4>
-                      <ul class="pl-3">
-                        <li>
-                          Created a recommender system in the form of an API.
-                        </li>
-                        <li>
-                          Technologies used: .NET (C#)
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-6 border-right">
-                      <div class="text-right">
-                        <h4>Software Engineer Intern</h4>
-                        <h5>Sept 2018 - Jan 2019</h5>
-                      </div>
-                    </div>
-                    <div class="col-6 border-left">
-                      <div>
-                        <h4>Methylium B.V.</h4>
-                        <ul class="pl-3">
-                          <li>
-                            Helped creating an Angular website for visualizing data
-                          </li>
-                          <li>
-                            Technologies used: Angular (TypeScript), Plotly.js
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-              </div>
-            </div>
-
             <div class="my-4" id="education">
               <h3 class="my-4">Education</h3>
               <div class="container">
@@ -359,8 +386,27 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
+                      <h4>Pre-Master in Computer Science</h4>
+                      <h5>Sept 2021 - Expected February 2022</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>Utrecht University</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Logic, Functional Programming
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
                       <h4>BSc in Computer Science</h4>
-                      <h5>Sept 2016 - Present</h5>
+                      <h5>Sept 2016 - Sept 2021</h5>
                     </div>
                   </div>
                   <div class="col-6 border-left">
@@ -396,10 +442,8 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
-
           </div>
 
         </div>
@@ -432,7 +476,7 @@
                   <a href="https://www.linkedin.com/in/li-wei-yeh/">
                     <i class="m-1 fab fa-linkedin-in nav-logo"></i>
                   </a>
-                  <a href="resources\cv.pdf" target="_blank" type='application/pdf'>
+                  <a href="resources\cv\LIWEI_YEH_CV.pdf" target="_blank" type='application/pdf'>
                     <i class="m-1 fas fa-file-alt nav-logo"></i>
                   </a>
                 </div>
