--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                   <div class="col-6 border-right">
                     <div class="text-right">
                       <h4 class="big-ass-word">
-                        <a href="https://github.com/LiWeiYeh/LiWeiYeh.github.io">
+                        <a class="text-link" href="https://github.com/LiWeiYeh/LiWeiYeh.github.io">
                           https://liweiyeh.github.io/
                         </a>
                       </h4>
