--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
-                      <h4>Pre-Master in Computer Science</h4>
-                      <h5>Sept 2021 - Expected February 2022</h5>
+                      <h4>Master in Computer Science</h4>
+                      <h5>February 2022 - Expected February 2024</h5>
                     </div>
                   </div>
                   <div class="col-6 border-left">
@@ -395,9 +395,23 @@
                       <h4>Utrecht University</h4>
                       <ul class="pl-3">
                         <li>
-                          Logic, Functional Programming
+                          Algorithm Design and Analysis Track
                         </li>
                       </ul>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
+                      <h4>Pre-Master in Computer Science</h4>
+                      <h5>Sept 2021 - February 2022</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>Utrecht University</h4>
                     </div>
                   </div>
                 </div>
