added favicon, updated work exp, just the site in general tbh

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Li-Wei Yeh</title>
+  <link rel="shortcut icon" href="resources/img/favicon.ico" />
 
   <link rel="stylesheet" href="main.css">
 
@@ -69,7 +70,7 @@
           <div class="w-100 text-center">
             <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Levi</h1>
           </div>
-          <h4 class="text-center font-inconsalita">Student in Computer Science</h4>
+          <h4 class="text-center font-inconsalita">I'm a Software Engineer</h4>
         </div>
       </div>
     </div>
@@ -80,9 +81,9 @@
     <div class="intro-content text-white darkened-div w-100vw">
       <div class="intro-text">
         <div class="w-100 text-center py-4">
-          <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Li-Wei</h1>
+          <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Levi</h1>
         </div>
-        <h4 class="intro-occupation text-center mx-4 font-inconsalita">Student in Computer Science</h4>
+        <h4 class="intro-occupation text-center mx-4 font-inconsalita">I'm a Software Engineer</h4>
       </div>
     </div>
   </div>
@@ -98,7 +99,7 @@
             <div class="about-me-intro text-center mb-5">
               <div class="d-inline-block w-75">
                 <p>
-                  Hi! I'm Levi, currently a pre-master computer science student. Thanks for checking my website!
+                  Hi! I'm Levi, a MSc student in Computer Science and am also employed as a Software Engineer.
                 </p>
               </div>
             </div>
@@ -122,7 +123,7 @@
                       <p><b>Age</b></p>
                     </div>
                     <div class="col-lg-8 col-7 text-darkgrey">
-                      <p>22</p>
+                      <p id="age"></p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
@@ -130,7 +131,6 @@
                     </div>
                     <div class="col-lg-8 col-7">
                       <p>BSc in Computer Science</p>
-                      <p>CCNA Routing and Switching, Introduction to Networks</p>
                     </div>
 
                     <div class="col-lg-4 col-5 border-right text-right">
@@ -228,8 +228,22 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
+                      <h4>Software Engineer Consultant</h4>
+                      <h5>September 2022 - Present</h5>
+                    </div>
+                  </div>
+                  <div class="col-6 border-left">
+                    <div>
+                      <h4>Ordina</h4>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-6 border-right">
+                    <div class="text-right">
                       <h4>Part-Time Developer</h4>
-                      <h5>July 2021 - Present</h5>
+                      <h5>July 2021 - August 2022</h5>
                     </div>
                   </div>
                   <div class="col-6 border-left">
@@ -240,10 +254,10 @@
                           Responsible for both front-end and back-end work
                         </li>
                         <li>
-                          Addressed bugs and possible improvements in existing applications using Kanban boards to prioritize requirements.
+                          Implemented features using Angular, and .NET
                         </li>
                         <li>
-                          Part of the scrum team, having regular daily standups and sprint reviews
+                          Addressed bugs and possible improvements in existing applications using Kanban boards.
                         </li>
                       </ul>
                     </div>
@@ -262,10 +276,10 @@
                       <h4>ilionx</h4>
                       <ul class="pl-3">
                         <li>
-                          Created a recommender system in the form of an API
+                          Created a recommender system in the form of a .NET API
                         </li>
                         <li>
-                          Used Kanban to prioritize requirements and communicate progress
+                          Applied machine learning techniques to the recommender system
                         </li>
                       </ul>
                     </div>
@@ -284,10 +298,7 @@
                         <h4>Methylium B.V.</h4>
                         <ul class="pl-3">
                           <li>
-                            Visualizing data in front-end development
-                          </li>
-                          <li>
-                            Part of the scrum team
+                            Visualizing data in front-end development using Angular
                           </li>
                         </ul>
                       </div>
@@ -316,13 +327,10 @@
                       <h4>Personal Website</h4>
                       <ul class="pl-3">
                         <li>
-                          Made with HTML, Scss and Bootstrap
+                          Created with HTML, JavaScript, Scss and Bootstrap
                         </li>
                         <li>
                           Used Font Awesome and Devicon icons
-                        </li>
-                        <li>
-                          Github link <a href="https://github.com/LiWeiYeh/LiWeiYeh.github.io">here</a>
                         </li>
                       </ul>
                     </div>
@@ -341,10 +349,10 @@
                         <h4>AI Project</h4>
                         <ul class="pl-3">
                           <li>
-                            Made with Python, Tensorflow
+                            Created with Python, Tensorflow
                           </li>
                           <li>
-                            Created a neural network to upscale image resolution. Input a low resolution image to get a higher resolution image.
+                            Created a neural network that aims to increase image resolution, whilst preserving image quality
                           </li>
                         </ul>
                       </div>
@@ -363,13 +371,10 @@
                           <h4>AI Project</h4>
                           <ul class="pl-3">
                             <li>
-                              Made with Python, OpenCV
+                              Created with Python, OpenCV
                             </li>
                             <li>
-                              Software will recognize your face, using your camera
-                            </li>
-                            <li>
-                              Github link <a href="https://github.com/LiWeiYeh/Face-Recognition-OpenCV">here</a>
+                              Software will recognize your face using your camera
                             </li>
                           </ul>
                         </div>
@@ -386,7 +391,7 @@
                 <div class="row">
                   <div class="col-6 border-right">
                     <div class="text-right">
-                      <h4>Master in Computer Science</h4>
+                      <h4>MSc in Computer Science</h4>
                       <h5>February 2022 - Expected February 2024</h5>
                     </div>
                   </div>
@@ -427,6 +432,9 @@
                     <div>
                       <h4>Rotterdam University of Applied Sciences</h4>
                       <ul class="pl-3">
+                        <li>
+                          Minored in Artificial Intelligence
+                        </li>
                         <li>
                           Propaedeutics in the 1st year
                         </li>
@@ -509,6 +517,9 @@
     </div>
   </footer>
 
+  <script>
+    var myAge = (new Date().getFullYear() - new Date(1999, 7, 8).getFullYear())
+    document.getElementById("age").innerHTML = myAge;
+  </script>
 </body>
-
 </html>
