--- a/index.html
+++ b/index.html
@@ -235,6 +235,17 @@
                   <div class="col-6 border-left">
                     <div>
                       <h4>Ordina</h4>
+                      <ul class="pl-3">
+                        <li>
+                          Lead the development of software systems
+                        </li>
+                        <li>
+                          Contribute to the continuous improvement of the development process
+                        </li>
+                        <li>
+                          Act as a technical point of contact for the team
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -254,7 +265,7 @@
                           Responsible for both front-end and back-end work
                         </li>
                         <li>
-                          Implemented features using Angular, and .NET
+                          Continuously improve the application by fixing bugs and adding new features using Angular, and .NET
                         </li>
                         <li>
                           Addressed bugs and possible improvements in existing applications using Kanban boards.
@@ -276,10 +287,7 @@
                       <h4>ilionx</h4>
                       <ul class="pl-3">
                         <li>
-                          Created a recommender system in the form of a .NET API
-                        </li>
-                        <li>
-                          Applied machine learning techniques to the recommender system
+                          Design and implement a recommender system using machine learning algorithms in the form of a .NET API
                         </li>
                       </ul>
                     </div>
@@ -298,7 +306,7 @@
                         <h4>Methylium B.V.</h4>
                         <ul class="pl-3">
                           <li>
-                            Visualizing data in front-end development using Angular
+                            Visualize data in front-end development using Angular
                           </li>
                         </ul>
                       </div>
@@ -518,7 +526,13 @@
   </footer>
 
   <script>
-    var myAge = (new Date().getFullYear() - new Date(1999, 7, 8).getFullYear())
+    function _calculateAge(birthday) {
+      var ageDifMs = Date.now() - birthday.getTime();
+      var ageDate = new Date(ageDifMs);
+      return Math.abs(ageDate.getUTCFullYear() - 1970);
+    }
+
+    var myAge = _calculateAge(new Date(1999, 7, 8))
     document.getElementById("age").innerHTML = myAge;
   </script>
 </body>
