update cv: change work experience bullet points

--- a/index.html
+++ b/index.html
@@ -237,10 +237,13 @@
                       <h4>Ordina</h4>
                       <ul class="pl-3">
                         <li>
-                          Lead the development of software systems
+                          Lead meetings within a Scrum team
                         </li>
                         <li>
-                          Contribute to the continuous improvement of the development process
+                          Created new features to continuously develop applications
+                        </li>
+                        <li>
+                          Addressed bugs and possible improvements
                         </li>
                         <li>
                           Act as a technical point of contact for the team
@@ -262,13 +265,10 @@
                       <h4>Methylium B.V.</h4>
                       <ul class="pl-3">
                         <li>
-                          Responsible for both front-end and back-end work
-                        </li>
-                        <li>
                           Continuously improve the application by fixing bugs and adding new features using Angular, and .NET
                         </li>
                         <li>
-                          Addressed bugs and possible improvements in existing applications using Kanban boards.
+                          Develop and maintain the front-end and back-end of the application
                         </li>
                       </ul>
                     </div>
