--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="col-lg-2"></div>
         <div class="intro-text col-lg-10 h-100">
           <div class="w-100 text-center">
-            <h1 class="intro-name d-inline-block font-inconsalita">Hi, I'm Levi</h1>
+            <h1 class="intro-name d-inline-block font-inconsalita">Li-Wei Yeh</h1>
           </div>
-          <h4 class="text-center font-inconsalita">I'm a Software Engineer</h4>
+          <h4 class="text-center font-inconsalita">Software Engineer | Full Stack Developer | MSc CompSci</h4>
         </div>
       </div>
     </div>
